# games-samples

./: .gitignore  .gitmodules  README.md  ashish
agdk/: .gitignore  README.md  THIRD_PARTY_NOTICES
agdk/adpf/: README.md  build.gradle  gradle.properties
agdk/adpf/app/: build.gradle
agdk/adpf/app/src/main/cpp/: CMakeLists.txt  adpf_manager.cpp  adpf_manager.h  android_main.cpp  box_renderer.h  common.h  demo_scene.cpp  demo_scene.h  engine.h  imgui_manager.cpp  imgui_manager.h  input_util.cpp  input_util.h  native_engine.cpp  native_engine.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  texture_asset_loader.h  util.cpp  util.h
agdk/adpf/app/src/main/cpp/ndk_helper/: JNIHelper.h  TapCamera.cpp  VecMath.h  sensorManager.h
agdk/agde/AssemblyCode-Link-Objects/: AssemblyCode-Link-Objects.sln
agdk/agde/HelloJNI-kotlin/: HelloJNI.sln
agdk/agde/Teapot/: README.md  Teapot.sln  build-with-multi-tool-task.diff  build.gradle  settings.gradle
agdk/agde/endless-tunnel/: endless-tunnel.sln
agdk/agde/endless-tunnel-pgo/: endless-tunnel.sln
agdk/agdktunnel/: README.md  build.gradle  gradle.properties  settings.gradle
agdk/agdktunnel/app/: build.gradle
agdk/agdktunnel/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  anim.cpp  anim.hpp  ascii_to_geom.cpp  ascii_to_geom.hpp  common.hpp  data_loader_machine.cpp  data_loader_machine.hpp  dialog_scene.cpp  dialog_scene.hpp  engine.hpp  game_activity_included.cpp  game_asset_manager.cpp  game_asset_manager.hpp  game_asset_manifest.cpp  game_asset_manifest.hpp  game_consts.hpp  game_text_input_included.cpp  gfx_manager.cpp  gfx_manager.hpp  indexbuf.cpp  indexbuf.hpp  input_util.cpp  input_util.hpp  jni_util.cpp  jni_util.hpp  joystick-support.hpp  loader_scene.cpp  loader_scene.hpp  loading_thread.cpp  loading_thread.hpp  memory_consumer.cpp  memory_consumer.hpp  native_engine.cpp  native_engine.hpp  obstacle.cpp  obstacle.hpp  obstacle_generator.cpp  obstacle_generator.hpp  (+40 more)
agdk/agdktunnel/app/src/main/cpp/data/: alphabet.inl  ascii_art.inl  blurb.inl  cube_geom.inl  our_shader.inl  strings.inl  tunnel_geom.inl
agdk/agdktunnel/app/src/main/cpp/native_wrappers/c/android/content/: context.cc  context.h
agdk/agdktunnel/app/src/main/cpp/native_wrappers/c/android/os/: vibration_attributes.cc  vibration_attributes.h  vibration_effect.cc  vibration_effect.h  vibrator.cc  vibrator.h  vibrator_manager.cc  vibrator_manager.h
agdk/agdktunnel/app/src/main/cpp/native_wrappers/c/java/lang/: char_sequence.cc  char_sequence.h  object.cc  object.h  string.cc  string.h
agdk/agdktunnel/app/src/main/cpp/native_wrappers/cpp/android/content/: context.cpp  context.hpp
agdk/agdktunnel/app/src/main/cpp/native_wrappers/cpp/android/os/: vibration_attributes.cpp  vibration_attributes.hpp  vibration_effect.cpp  vibration_effect.hpp  vibrator.cpp  vibrator.hpp  vibrator_manager.cpp  vibrator_manager.hpp
agdk/agdktunnel/app/src/main/cpp/native_wrappers/cpp/java/lang/: char_sequence.cpp  char_sequence.hpp  object.cpp  object.hpp  string.cpp  string.hpp
agdk/agdktunnel/install_time_assets/: build.gradle
agdk/agdktunnel/library_wrapper/: config.json
agdk/agdktunnel/on_demand_assets/: build.gradle
agdk/common/include/: Log.h  Thread.h  Trace.h  Versions.h  adpf_manager.h  box_renderer.h  common.h  imgui_manager.h  scene.h  util.h
agdk/common/ndk_helper/: GLContext.cpp  Interpolator.h  JNIHelper.cpp  JNIHelper.h  PerfMonitor.cpp  PerfMonitor.h  Shader.cpp  Shader.h  TapCamera.cpp  TapCamera.h  VecMath.h
agdk/common/simple_renderer/: README.md  renderer_buffer.h  renderer_debug.h  renderer_debug_gles.cpp  renderer_debug_vk.cpp  renderer_gles.cpp  renderer_gles.h  renderer_index_buffer.h  renderer_index_buffer_gles.cpp  renderer_index_buffer_gles.h  renderer_index_buffer_vk.cpp  renderer_index_buffer_vk.h  renderer_interface.cpp  renderer_interface.h  (+36 more)
agdk/game_controller/: README.md  build.gradle  gradlew  settings.gradle
agdk/game_controller/app/src/main/cpp/: CMakeLists.txt  GameControllerMappingFile.h  JNIUtil.h  android_main.cpp  controllerui_data.cpp  controllerui_data.h  controllerui_util.cpp  controllerui_util.h  demo_scene.cpp  demo_scene.hpp  engine.hpp  imgui_manager.hpp  input_util.cpp  input_util.hpp  jni_util.cpp  jni_util.hpp  native_engine.cpp  native_engine.hpp  remap_test.cpp  remap_test.hpp  scene_manager.cpp  texture_asset_loader.cpp  texture_asset_loader.h
agdk/game_mode/: README.md  build.gradle  gradle.properties  gradlew.bat
agdk/game_mode/app/src/main/cpp/: CMakeLists.txt  adpf_manager.cpp  adpf_manager.h  android_main.cpp  demo_scene.cpp  demo_scene.h  engine.h  game_mode_manager.cpp  game_mode_manager.h  imgui_manager.cpp  imgui_manager.h  input_util.h  native_engine.cpp  native_engine.h  scene.cpp  scene_manager.cpp  scene_manager.h  util.cpp  welcome_scene.cpp  welcome_scene.h
agdk/game_mode/app/src/main/cpp/ndk_helper/: GLContext.h  NDKHelper.h  Shader.cpp  TapCamera.h  VecMath.cpp  gestureDetector.cpp  gestureDetector.h
agdk/util/protobuf/full/: CMakeLists.txt
agdk/util/protobuf/lite/: CMakeLists.txt
codelabs/: README.md
codelabs/native-gamepad/: .gitignore  .gitmodules  README.md
codelabs/native-gamepad/final/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  common.hpp  demo_scene.cpp  demo_scene.hpp  game_asset_manager.cpp  imgui_manager.cpp  input_util.hpp  jni_util.cpp  jni_util.hpp  native_engine.cpp  native_engine.hpp  scene_manager.hpp  texture_manager.cpp  texture_manager.hpp
codelabs/unity-gamepad/: .gitignore  README.md
trivialkart/LevelUp_MultiLogin_Server/: package-lock.json  package.json  server.js
trivialkart/auth-server/: package.json
trivialkart/trivialkart-auth-server/: README.md  server.js
trivialkart/trivialkart-godot/: README.md  export_presets.cfg  project.godot
trivialkart/trivialkart-recall-server/: README.md  package-lock.json  package.json  server.js
trivialkart/trivialkart-unity/: .gitignore  README.md
unity/anr_plugin/: README.md
unity/power_efficiency_demo/: README.md
unreal/ShooterGame/: .gitignore  ShooterGame.uproject
(+1128 files in other folders)
